[package]
authors = ["Sean Kelleher <ezanmoto@gmail.com>"]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::build-utils",
]
description = "A tool for using Docker containers as environments"
keywords = ["dependencies"]
license = "MIT"
name = "dock"
readme = "README.md"
repository = "https://github.com/ezanmoto/dock"
version = "0.33.0"
edition = "2021"

[dependencies]
clap = "=3.1.18"
serde_yaml = "=0.8.1"
snafu = "=0.6.9"

[dependencies.serde]
version = "=1.0.133"
features = ["derive"]

[dependencies.tokio]
version = "=1.18.2"
features = [
    "io-util",
    "macros",
    "process",
    "rt",
]

[dev-dependencies]
assert_cmd = "=1.0.1"
assert_matches = "=1.5.0"
indoc = "=1.0.2"
maplit = "=1.0.2"
nix = "=0.24.1"
predicates = "=2.1.1"
scopeguard = "=1.1.0"
